Fix header overflow-x not working

--- a/apps/juxtaposition-ui/webfiles/ctr/css/juxt.css
+++ b/apps/juxtaposition-ui/webfiles/ctr/css/juxt.css
@@ -15,7 +15,7 @@ body {
 #body,
 #header,
 body {
-    overflow-x: hidden;
+    overflow-x: clip; /* Doesn't work on CTR, but the CSS relies on it not working */
 }
 
 #body {
